--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,11 +1,35 @@
-# Introduction
- 
-Welcome to Nextra! This is a basic docs template. You can use it as a starting point for your own project :)
+# Introduction aux technologies du web
 
-## What is Nextra?
+Dans le cadre de vos études à l'Université Champollion à Albi, ce programme de cours vous permettra de maîtriser les technologies essentielles au développement web moderne.
 
-A **simple**, **powerful** and **flexible** site generation framework with everything you love from Next.js.
+- **[Docker](/docker)** : Introduction à la conteneurisation d'applications, une technologie clé pour le déploiement simplifié et la gestion des environnements de développement.
 
-## Documentation
+- **[NPM](/NPM)** : Gestion des dépendances dans les projets JavaScript. Vous apprendrez à utiliser NPM pour gérer vos modules et automatiser les tâches dans vos projets.
 
-The documentation is available at [https://nextra.site](https://nextra.site).
+- **[Node.js](/node.js)** : Développement backend avec Node.js. Ce chapitre couvre la création de serveurs web asynchrones et performants, ainsi que la manipulation de fichiers et de bases de données.
+
+- **[Git](/git)** : Système de gestion de version incontournable. Vous étudierez la manière de gérer les versions de votre code source, de collaborer efficacement en équipe, et de déployer des projets via des plateformes comme GitHub.
+
+- **MongoDB** : Base de données NoSQL adaptée aux besoins des applications modernes. Ce module vous introduira aux concepts de stockage et de gestion des données dans un environnement non relationnel.
+
+- **GraphQL** : Langage de requête pour API. Vous apprendrez à interroger des données de manière optimisée et flexible, en comparaison avec des API REST classiques.
+
+- **Authentification** : Concepts d’authentification et d’autorisation pour sécuriser les applications web. Ce module vous familiarisera avec les méthodes modernes d’authentification (OAuth, JWT).
+
+- **Tooling** : Introduction aux outils de productivité en développement web tels que les bundlers (Webpack, Parcel), les analyseurs de code (ESLint), et les formatteurs (Prettier) pour automatiser les tâches et garantir la qualité du code.
+
+- **React** : Framework JavaScript populaire pour le développement d'interfaces utilisateur dynamiques. Vous explorerez les concepts de composants, d'état, et de gestion d'événements avec React.
+
+- **Next.js** : Développement d'applications React côté serveur pour une meilleure performance et optimisation SEO. Vous verrez comment intégrer ce framework pour créer des applications web universelles.
+
+- **UX/UI et Accessibilité** : Introduction aux principes fondamentaux de conception d'interfaces utilisateur, avec un accent particulier sur l'accessibilité pour garantir une expérience utilisateur inclusive.
+
+### Objectifs pédagogiques :
+
+Ce programme a pour but de vous fournir une maîtrise pratique et théorique des technologies actuelles du web. À la fin de ces cours, vous serez capable de :
+
+- Créer et gérer des projets web complets, du serveur à l'interface utilisateur.
+- Utiliser des outils et frameworks adaptés aux besoins actuels du développement professionnel.
+- Appliquer les bonnes pratiques en matière d'optimisation, de versionnage et de sécurité dans vos projets.
+
+Les compétences acquises dans ce cadre vous permettront de répondre aux exigences du marché du travail et de poursuivre vos projets avec une solide base technique.
