--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,8 +1,8 @@
-# Introduction aux technologies du web
+# Introduction aux science oculte
 
 Dans le cadre de vos études à l'Université Champollion à Albi, ce programme de cours vous permettra de maîtriser les technologies essentielles au développement web moderne.
 
-- **[Docker](/docker)** : Introduction à la conteneurisation d'applications, une technologie clé pour le déploiement simplifié et la gestion des environnements de développement.
+- **[OK](/docker)** : Introduction à la conteneurisation d'applications, une technologie clé pour le déploiement simplifié et la gestion des environnements de développement.
 
 - **[NPM](/NPM)** : Gestion des dépendances dans les projets JavaScript. Vous apprendrez à utiliser NPM pour gérer vos modules et automatiser les tâches dans vos projets.
 
